crates/core/src/snapshots/core__query__tests__multiple_row_aggregate-2.snap
---
source: crates/core/src/query.rs
expression: result.cost
---
Cost {
    rows_processed: 7016,
}
