crates/core/src/snapshots/core__query__tests__query_projection.snap
---
source: crates/core/src/query.rs
expression: run_query(&query).unwrap().to_json()
---
[
  {
    "animal_name": "horse"
  }
]
