crates/core/src/snapshots/core__query__tests__query_select_animals.snap
---
source: crates/core/src/query.rs
expression: run_query(&query).unwrap().to_json()
---
[
  {
    "animal_id": 1,
    "animal_name": "horse",
    "species_id": 1
  },
  {
    "animal_id": 2,
    "animal_name": "dog",
    "species_id": 1
  },
  {
    "animal_id": 3,
    "animal_name": "snake",
    "species_id": 2
  }
]
