crates/core/src/snapshots/core__query__tests__query_select_horse.snap
---
source: crates/core/src/query.rs
expression: run_query(&query).unwrap().to_json()
---
[
  {
    "animal_id": 1,
    "animal_name": "horse",
    "species_id": 1
  }
]
