crates/core/src/snapshots/core__query__tests__select_album.snap
---
source: crates/core/src/query.rs
expression: run_query(&query).unwrap().to_json()
---
[
  {
    "AlbumId": 6,
    "ArtistId": 4,
    "Title": "Jagged Little Pill"
  }
]
