crates/core/src/snapshots/core__query__tests__select_album_and_artist-2.snap
---
source: crates/core/src/query.rs
expression: result.cost
---
Cost {
    rows_processed: 1938,
}
