crates/core/src/snapshots/core__query__tests__select_album_and_artist.snap
---
source: crates/core/src/query.rs
expression: run_query(&query).unwrap().to_json()
---
[
  {
    "AlbumId": 74,
    "ArtistId": 82,
    "Name": "Faith No More",
    "Title": "Album Of The Year"
  },
  {
    "AlbumId": 75,
    "ArtistId": 82,
    "Name": "Faith No More",
    "Title": "Angel Dust"
  },
  {
    "AlbumId": 76,
    "ArtistId": 82,
    "Name": "Faith No More",
    "Title": "King For A Day Fool For A Lifetime"
  },
  {
    "AlbumId": 77,
    "ArtistId": 82,
    "Name": "Faith No More",
    "Title": "The Real Thing"
  }
]
