crates/core/src/snapshots/core__query__tests__select_order_by_artist_id_and_title_with_limit-2.snap
---
source: crates/core/src/query.rs
expression: result.cost
---
Cost {
    rows_processed: 3148,
}
