crates/core/src/snapshots/core__query__tests__select_order_by_artist_id_and_title_with_limit.snap
---
source: crates/core/src/query.rs
expression: result.to_json()
---
[
  {
    "ArtistId": 1,
    "Title": "For Those About To Rock We Salute You"
  },
  {
    "ArtistId": 1,
    "Title": "Let There Be Rock"
  },
  {
    "ArtistId": 2,
    "Title": "Balls to the Wall"
  },
  {
    "ArtistId": 2,
    "Title": "Restless and Wild"
  }
]
